# IG-Trading-Historical-Data

./: .gitignore  IG_Trading_Historical_Data.py  LICENSE  README.md  ig_trading_historical_data.py  pyproject.toml  quickstart.py  requirements.txt
.github/workflows/: build-test-multiple-python-versions.yml  pylint.yml  python-package-version-checks.yml  python-package.yml
ig_trading_historical_data/: __init__.py  ig_trading_historical_data.py
tests/: IG_Trading_Historical_Data_test.py  test_get_prices_single_asset.py  test_get_prices_single_asset_num_points.py  test_get_watchlist.py  test_login.py
tests/data/: acc_info.py  mock_acc_info.json  mock_hist_data.py  mock_hist_data_dates_no_time_interval.json  mock_hist_data_dates_time_interval_1.json  mock_hist_data_dates_time_interval_2.json  mock_hist_data_num_points.json  mock_user_info_demo.py  mock_watchlist.json
